# ChallengeWeekSoftware

./: testingcommands.txt
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: basic_connection.cpp  motors.cpp  publisher_member_function.cpp  testingcommands.txt
cpp_pubsub/src/MotorFunctions/: MotorFunctions.cpp  MotorFunctions.h
cpp_pubsub/src/MotorFunctions/install/: local_setup.sh  setup.sh
cpp_pubsub/src/MotorFunctions/log/: latest_build
